samples/_failures_safe/1761596362_547bc5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d149354f.c: In function ‘main’:
./samples/SAFE/__tmp_d149354f.c:152:43: error: missing terminating " character
  152 |                     print_matrix(&result, "A
      |                                           ^~
./samples/SAFE/__tmp_d149354f.c:152:21: error: expected expression at end of input
  152 |                     print_matrix(&result, "A
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_d149354f.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d149354f.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d149354f.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d149354f.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d149354f.c:152:21: error: expected declaration or statement at end of input
